redis-template.yaml
apiVersion: v1
kind: Template
labels:
  template: redis-template
metadata:
  annotations:
    description: Redis is an open source key-value store that functions as a data structure server.
    iconClass: icon-redis
    tags: cache,database,redis
  creationTimestamp: null
  name: redis
objects:
- apiVersion: v1
  kind: Service
  metadata:
    creationTimestamp: null
    name: ${REDIS_SERVICE_NAME}
  spec:
    portalIP: ""
    ports:
    - name: tcp
      nodePort: 0
      port: 6379
      protocol: TCP
      targetPort: 6379
    selector:
      name: ${REDIS_SERVICE_NAME}
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: DeploymentConfig
  metadata:
    creationTimestamp: null
    name: ${REDIS_SERVICE_NAME}
    labels:
      name: ${REDIS_SERVICE_NAME}
  spec:
    replicas: 1
    selector:
      name: ${REDIS_SERVICE_NAME}
    strategy:
      resources: {}
      type: Recreate
    template:
      metadata:
        creationTimestamp: null
        labels:
          name: ${REDIS_SERVICE_NAME}
      spec:
        containers:
        - capabilities: {}
          env:
          - name: REDIS_MAX_MEMORY
            value: ${REDIS_MAX_MEMORY}
          - name: REDIS_MAX_MEMORY_POLICY
            value: ${REDIS_MAX_MEMORY_POLICY}
          - name: REDIS_EXTRA_PARAMETERS
            value: ${REDIS_EXTRA_PARAMETERS}
          image: redis
          imagePullPolicy: IfNotPresent
          name: redis
          ports:
          - containerPort: 6379
            protocol: TCP
          resources: {}
          securityContext:
            capabilities: {}
            privileged: false
          terminationMessagePath: /dev/termination-log
        dnsPolicy: ClusterFirst
        restartPolicy: Always
    triggers:
    - imageChangeParams:
        automatic: false
        containerNames:
        - redis
        from:
          kind: ImageStreamTag
          name: redis:latest
          namespace: openshift
        lastTriggeredImage: ""
      type: ImageChange
    - type: ConfigChange
  status: {}
parameters:
- description: Redis service name
  name: REDIS_SERVICE_NAME
  required: true
  value: "redis"
- description: Max memory Redis can use
  name: REDIS_MAX_MEMORY
  required: true
  value: "409MB"
- description: How Redis will select what to remove when maxmemory is reached
  name: REDIS_MAX_MEMORY_POLICY
  required: false
  value: "allkeys-lru"
- description: Extra command line parameters to start redis
  name: REDIS_EXTRA_PARAMETERS
  required: false
  value: "--maxclients 10000 --tcp-backlog 128"
